introduce hightlight.js and finished syntax highlighting for most viewed post

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: https://codingpedia.github.io
+url:
 
 # draw your top menu here
 # each item must have a title and a url.
