--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -41,7 +41,7 @@ dexter:
 aredko:
   name:          Andriy Redko
   site:           http://aredko.blogspot.com/
-  avatar:         images/authors/amacoder.png
+  avatar:         images/authors/aredko.jpg
   bio:            "Seasoned software developer with a great passion to code. I am extensively working with JVM platform using Java, Groovy, Scala as well as other languages and technologies (Ruby, Grails, Play!, Akka, MySQL, PostreSQL, MongoDB, Redis, JUnit, ...)"
   # GitHub nick for use in follow button in author block.
   github: reta
