fix link to linkedin profile of author 'benas'

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -47,7 +47,7 @@ benas:
     - title: "github"
       url: "https://github.com/benas"
     - title: "linkedin"
-      url: "http://fr.linkedin.com/in/mahmoudbenhassine/"
+      url: "https://fr.linkedin.com/in/mbenhassine/"
 
 dexter:
   name:          Dexter's Laboratory
