replace title in header and bookmarks url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            CodingpediaOrg
+title:            CodepediaOrg
 description:      Sharing coding knowledge
 # put your disqus here
 disqus_shortname:  codingpedia
