--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -1,4 +1,4 @@
-title:            CodingpediaOrg
+title:            CodepediaOrg
 description:      Sharing coding knowledge
 # put your disqus here
 disqus_shortname:  codingpedia
@@ -16,7 +16,7 @@ url: http://localhost:4000
 # See the example
 menu:
   - title: 'Bookmarks'
-    url: 'https://www.codingmarks.org/'
+    url: 'https://www.bookmarks.dev/'
   - title: 'About'
     url: '/about/'
   - title: 'Tags'
