replace twitter username

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -44,7 +44,7 @@ twitter:
 # Social networking links used in author block underneath posts. Update and remove as you like.
 social:
   - title: "github"
-    url: "https://github.com/Codingpedia"
+    url: "https://github.com/CodepediaOrg"
   - title: "linkedin"
     url: "https://www.linkedin.com/company/codepediaorg"
   - title: "youtube"
