--- a/_config.yml
+++ b/_config.yml
@@ -27,15 +27,15 @@ menu:
 
 # Owner/author information
 owner:
-  name:          Codingpedia Association
+  name:          CodepediaOrg
   site:           https://www.codepedia.org
   avatar:         images/avatar.jpg
   bio:            "Share coding knowledge"
   email:          contact@codepedia.org
   # Twitter nick for use in Twitter cards and follow button.
-  twitter: codingpedia # if no twitter in this config, the twitter follow button will be removed
+  twitter: CodepediaOrg # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
-  github: codingpedia
+  github: CodepediaOrg
 
 # Twitter account associated with the site if different from owner/author twitter account.
 # Used in Twitter cards.
@@ -44,7 +44,7 @@ twitter:
 # Social networking links used in author block underneath posts. Update and remove as you like.
 social:
   - title: "github"
-    url: "https://github.com/Codingpedia"
+    url: "https://github.com/CodepediaOrg"
   - title: "linkedin"
     url: "https://www.linkedin.com/company/codepediaorg"
   - title: "youtube"
