--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -99,6 +99,6 @@ page_layout: page
 # Format titles with titlecase?
 titlecase: true
 
-include: [".htaccess"]
+include: [".htaccess", ".well-known/brave-rewards-verification.txt"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
 gems: [jekyll-paginate]
