add only directory name .well-known

--- a/_config.yml
+++ b/_config.yml
@@ -99,5 +99,5 @@ page_layout: page
 # Format titles with titlecase?
 titlecase: true
 
-include: [".htaccess", ".well-known/brave-rewards-verification.txt"]
+include: [".htaccess", ".well-known"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
