--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ background:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-54573715-1
-google_verify:
+google_verify: sF69UFyFR3CUy0835jvPyZZe8e6bdAFMhP0r3W9SGnM
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
 
