remove share on google plus

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -1,5 +1,5 @@
 title:            CodepediaOrg
-description:      Sharing coding knowledge
+description:      Share coding knowledge
 # put your disqus here
 disqus_shortname:  codingpedia
 reading_time:     true # if true, shows the estimated reading time for a post
