rename "gems" to "plugins" to avoid warning

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ locale:      en_US
 future:      true
 highlighter: rouge
 markdown:    kramdown
-gems:
+plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-gist
