--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -101,4 +101,4 @@ titlecase: true
 
 include: [".htaccess", ".well-known/brave-rewards-verification.txt"]
 exclude: [".idea","lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
