Update details in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hpstr-theme",
-  "author": "Aron Bordin <aron.bordin@gmail.com>",
+  "author": "Adrian Matei <ama@codepedia.org>",
   "homepage": "",
   "repository": {
     "type": "git",
