--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ owner:
   name:          CodepediaOrg
   site:           https://www.codepedia.org
   avatar:         images/avatar.jpg
-  bio:            "Share coding knowledge"
-  email:          ama@codingpedia.org
+  bio:            "Share code knowledge"
+  email:          ama@codepedia.org
   # Twitter nick for use in Twitter cards and follow button.
   twitter: CodepediaOrg # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
