commit remove disqus shortname so that it dissappears

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            CodepediaOrg
 description:      Share coding knowledge
 encoding: utf-8
 # put your disqus here
-disqus_shortname:  codingpedia
+disqus_shortname:
 reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
