--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -1,7 +1,7 @@
 title:            CodepediaOrg
 description:      Share coding knowledge
 # put your disqus here
-disqus_shortname:  codingpedia
+disqus_shortname:
 reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
