correct owner data in config.dev.yml

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -27,11 +27,11 @@ menu:
 
 # Owner/author information
 owner:
-  name:          Codingpedia Association
+  name:          Adrian Matei
   site:           http://www.codepedia.org
   avatar:         images/avatar.jpg
   bio:            "Share coding knowledge"
-  email:          contact@codepedia.org
+  email:          ama@codepedia.org
   # Twitter nick for use in Twitter cards and follow button.
   twitter: CodepediaOrg # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
