--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -28,7 +28,7 @@ menu:
 # Owner/author information
 owner:
   name:          Adrian Matei
-  site:           http://www.codepedia.org
+  site:           https://www.codepedia.org
   avatar:         images/avatar.jpg
   bio:            "Share coding knowledge"
   email:          ama@codepedia.org
