--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 ama:
   name:          Adrian Matei
-  site:           http://www.codepedia.org
+  site:           https://www.codepedia.org
   avatar:         images/authors/amacoder.png
   bio:            "Life force expressing itself as a coding capable human being"
   email:          adrianmatei@gmail.com
@@ -49,7 +49,7 @@ benas:
 
 dexter:
   name:          Dexter's Laboratory
-  site:           http://www.codepedia.org
+  site:           https://www.codepedia.org
   avatar:         images/authors/dexter.jpg
   bio:            "A boy-genius and inventor with a secret laboratory, who constantly battles his sister Dee Dee in an attempt to keep her out of the lab."
   email:          adrianmatei@gmail.com
