--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,7 @@ kramdown:
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
+  parse_block_html: true
 
 # Octopress
 # Default extensions
