add new snippt post 2022-11-25-access-elements-filtered-by-pipe-in-angular-html-template.md

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 ama:
-  name:          Adixchen
+  name:          Adrian Matei (aka adixchen)
   site:           https://www.codepedia.org
   avatar:         images/authors/amacoder.png
   bio:            "Life force expressing itself as a coding capable human being"
