--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -16,7 +16,7 @@ url: http://localhost:4000
 # See the example
 menu:
   - title: 'Bookmarks'
-    url: 'https://www.codever.land/'
+    url: 'https://www.codever.dev/'
   - title: 'About'
     url: '/about/'
   - title: 'Tags'
